@@ -1,8 +1,9 @@
-2020-08-04
+2020-08-05
 
         * Bug fix version 1.7.1 released
         ================================
 
+        Speed up model definition XML file writing (#3308)
         Fix automatic type casting in Python interface (#3295)
         Make parameter file reading and writing thread safe (#3287)
         Add quotes to sky region names (#3280)
